[package]
name = "tasty-scrabble"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.6", features = ["serde"] }
arbitrary-int = "1.2.6"
bitbybit = "1.2.2"
parking_lot = "0.12.1"
rayon = "1.8.0"
serde_json = "1.0.108"
